src/test/resources/com/github/stefanbirkner/chelidonium/errors/twoErrors.snippet


<form id="model" action="/test/errors/twoErrors.html" method="post">
	<div class="alert alert-error">Test A</div><div class="alert alert-error">Test B</div>
</form>